objects/RPS_Contact__x.object
<CustomObject>
    <fields>
        <fullName>RPS_Seller_Status_c__c</fullName>
        <externalDeveloperName>RPS_Seller_Status__c</externalDeveloperName>
        <label>Seller Status</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Seller_Type_c__c</fullName>
        <externalDeveloperName>RPS_Seller_Type__c</externalDeveloperName>
        <label>Seller Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Seller_c__c</fullName>
        <externalDeveloperName>RPS_Seller__c</externalDeveloperName>
        <inlineHelpText>Click to view Producer Code and Licensing Information</inlineHelpText>
        <label>Seller</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Sells_Taft_Hartley_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Sells_Taft_Hartley__c</externalDeveloperName>
        <label>Sells Taft Hartley?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Signature_Assets_Updated_On_c__c</fullName>
        <externalDeveloperName>RPS_Signature_Assets_Updated_On__c</externalDeveloperName>
        <label>Signature Assets Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Specializations_c__c</fullName>
        <externalDeveloperName>RPS_Specializations__c</externalDeveloperName>
        <label>Specializations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Specialties_c__c</fullName>
        <externalDeveloperName>RPS_Specialties__c</externalDeveloperName>
        <label>Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Retirement Plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Surviving_Contact_c__c</fullName>
        <externalDeveloperName>RPS_Surviving_Contact__c</externalDeveloperName>
        <label>Surviving Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_TRS_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_TRS_Total_AUM__c</externalDeveloperName>
        <label>TRS Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Target_Advisor_Tier_c__c</fullName>
        <externalDeveloperName>RPS_Target_Advisor_Tier__c</externalDeveloperName>
        <inlineHelpText>Tier 1: up to 25
Tier 2: 26-75
Tier 3: 76-225</inlineHelpText>
        <label>Target Advisor Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Target_Plan_Size_c__c</fullName>
        <externalDeveloperName>RPS_Target_Plan_Size__c</externalDeveloperName>
        <label>Target Plan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Target_Tier_c__c</fullName>
        <externalDeveloperName>RPS_Target_Tier__c</externalDeveloperName>
        <inlineHelpText>Tier 1: up to 25; Tier 2: 26-75; Tier 3: 76-225</inlineHelpText>
        <label>Target Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Team_Type_c__c</fullName>
        <externalDeveloperName>RPS_Team_Type__c</externalDeveloperName>
        <label>Team Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Tenure_Years_c__c</fullName>
        <externalDeveloperName>RPS_Tenure_Years__c</externalDeveloperName>
        <label>Tenure (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Third_Party_Proprietary_Tools_Used_c__c</fullName>
        <externalDeveloperName>RPS_Third_Party_Proprietary_Tools_Used__c</externalDeveloperName>
        <inlineHelpText>Third party and/or proprietary tools used</inlineHelpText>
        <label>Third Party/Proprietary Tools Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Top_3_Competitors_c__c</fullName>
        <externalDeveloperName>RPS_Top_3_Competitors__c</externalDeveloperName>
        <inlineHelpText>Top 3 Bundled Platforms and why</inlineHelpText>
        <label>Top 3 Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM_As_Of_Date_c__c</fullName>
        <externalDeveloperName>RPS_Total_AUM_As_Of_Date__c</externalDeveloperName>
        <label>Total AUM As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM_c__c</fullName>
        <externalDeveloperName>RPS_Total_AUM__c</externalDeveloperName>
        <label>Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Understands_Business_Complexities_c__c</fullName>
        <externalDeveloperName>RPS_Understands_Business_Complexities__c</externalDeveloperName>
        <label>Understands Business Complexities</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Understands_Plan_Objectives_c__c</fullName>
        <externalDeveloperName>RPS_Understands_Plan_Objectives__c</externalDeveloperName>
        <label>Understands Plan Objectives</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Understands_Plan_Risk_c__c</fullName>
        <externalDeveloperName>RPS_Understands_Plan_Risk__c</externalDeveloperName>
        <label>Understands Plan Risk</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Value_Add_Services_Offered_c__c</fullName>
        <externalDeveloperName>RPS_Value_Add_Services_Offered__c</externalDeveloperName>
        <inlineHelpText>Investment models, custom asset allocations, target date, etc.  (If yes, who are preferred providers for these services?)</inlineHelpText>
        <label>Value-Add Services Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Value_Proposition_to_Plan_Sponsor_c__c</fullName>
        <externalDeveloperName>RPS_Value_Proposition_to_Plan_Sponsor__c</externalDeveloperName>
        <label>Value Proposition to Plan Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Website_c__c</fullName>
        <externalDeveloperName>RPS_Website__c</externalDeveloperName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsToId__c</fullName>
        <externalDeveloperName>ReportsToId</externalDeveloperName>
        <label>Reports To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <externalDeveloperName>Suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>RPS Contact</label>
    <pluralLabel>RPS Contacts</pluralLabel>
</CustomObject>